bug/contact-us: Repaired the spacing tab on contact us page.

--- a/css/styles.css
+++ b/css/styles.css
@@ -303,7 +303,7 @@
   color: red;
 }
 .formu .wrapper-formu .inputs {
-  padding: 100px 90px 0 90px;
+  padding: 100px 0 0 0;
 }
 .formu .inputs .circle {
   padding: 25px 80px 35px 53px;
