--- a/less/components/03-contact-us.less
+++ b/less/components/03-contact-us.less
@@ -14,7 +14,6 @@
 #form .icons{
   background-color: white;
 }
-
 #form .icons i{
   font-size: 20px;
   color: orange;
@@ -31,7 +30,7 @@
 }
 
 .formu .wrapper-formu .inputs{
-  padding: 100px 90px 0 90px;
+  padding: 100px 0 0 0;
 }
 
 .formu .inputs .circle{
@@ -63,13 +62,13 @@
 }
 
 .formu .wrapper-message .hidden-3{
-    display: none;
-    margin-left: 50px;
-  }
+  display: none;
+  margin-left: 50px;
+}
 
 /* Tablet */
 @media (min-width: 768px) {
-  .formu .inputs .circle{
+  .formu .inputs .circle {
     padding: 25px 10px 35px 53px;
     border-radius: 4rem;
     border: 1px solid black;
@@ -86,12 +85,12 @@
   }
 
   #form .icons .ihouse p{
-  padding: 0;
-}
+    padding: 0;
+  }
 
-.formu .wrapper-formu .inputs{
-  padding: 100px 0 0 0;
-}
+  .formu .wrapper-formu .inputs{
+    padding: 100px 0 0 0;
+  }
 
   .formu .wrapper-message .hidden-2{
     display: block;
@@ -100,7 +99,7 @@
 }
 
 @media (min-width: 992px) {
-  #form .icons{
+  #form .icons {
     margin: 0 80px;
   }
 
@@ -114,7 +113,7 @@
 }
 
 @media (min-width: 1200px) {
-  #form .icons{
+  #form .icons {
     margin: 0;
   }
 
